updated to apptainer

--- a/custom_themes/firo_theme/css/firo_home.css
+++ b/custom_themes/firo_theme/css/firo_home.css
@@ -1,6 +1,6 @@
 body{
     font-size: 20px !important;
     font-family: 'Fira Code', monospace !important;
-    background-color: #cdd7eb !important;
+    background-color: #2fe28f !important;
     color: #abb2bf;
 }
