--- a/custom_themes/firo_theme/templates/firo_home.html
+++ b/custom_themes/firo_theme/templates/firo_home.html
@@ -92,7 +92,7 @@
 					<div class="card-body">
 						<p class="card-text">
 							The FIRO <a href="https://www.tethysplatform.org/">tethys</a> portal provides a library of tools and resources for use in <a href="https://cw3e.ucsd.edu/firo/">Forecast Informed
-							Reservoir Operations</a>. For more information on developing new applications or adding existing applications to the portal, please 
+							Reservoirs Operations</a>. For more information on developing new applications or adding existing applications to the portal, please 
 							reach out to ckrewson@aquaveo.com 
 						</p>
 						<img src="/static/firo_theme/images/CW3E.png" class="img-logo">
