added some footer from word press to the default theme

--- a/custom_themes/tethysext-default_theme/tethysext/default_theme/templates/default_theme/home.html
+++ b/custom_themes/tethysext-default_theme/tethysext/default_theme/templates/default_theme/home.html
@@ -7,6 +7,10 @@
 {% block custom_styles %}
   {{ block.super }}
   <link rel="stylesheet" href="{% static 'default_theme/css/main.css' %}">
+  <link rel="stylesheet" href="{% static 'default_theme/wp-content/themes/twentysixteen/style-65e35e6273e5f8.css' %}">
+  <link rel="stylesheet" href="{% static 'default_theme/wp-content/themes/twentysixteen/style.css' %}">
+  <link rel="stylesheet" href="{% static 'default_theme/wp-content/themes/twentysixteen-child/style-f18355dd3455c8.css' %}">
+  <link rel="stylesheet" href="{% static 'default_theme/wp-content/themes/twentysixteen-child/style.css' %}">
   
 {% endblock %}
 
