--- a/custom_themes/tethysext-default_theme/tethysext/default_theme/templates/default_theme/home.html
+++ b/custom_themes/tethysext-default_theme/tethysext/default_theme/templates/default_theme/home.html
@@ -392,11 +392,18 @@
 
 {% endblock %}
 
+
+{% block header %}
+	{% include "default_theme/header.html" %}
+	<div class="clear-header"></div>
+{% endblock %}
+
+
 {% block content %}
 
 <div id="content-home" class="site-content">
-	<div class="container-fluid hero-container hero-bg">
-		<section class="hero clearfix px-5 pb-5 text-center text-white">
+	<div class="container-fluid hero-container">
+		<section class="hero clearfix px-5 pb-5 text-center">
 			<div class="row align-items-center">
 				<div class="col-md-7 mx-auto">
 					<h1 class="hero-title mb-3">{% if site_globals.hero_text %}{{ site_globals.hero_text }}{% else %}Welcome to Tethys Portal,
@@ -405,6 +412,7 @@
 			organization. You can change everything on this page from the Home Page settings.{% endif %}</h3>
 					{% if not user.is_authenticated and ENABLE_OPEN_SIGNUP %}
 						<a href="{% url 'accounts:register' %}" class="btn btn-outline-light btn-sign-up mx-auto mt-5 mb-3">Sign Up</a>
+						<a href="{% url 'accounts:login' %}" class="btn btn-outline-light btn-sign-up mx-auto mt-5 mb-3">Login</a>
 					{% endif %}
 				</div>
 				<div class="card-body">
@@ -451,9 +459,6 @@
 	</section>
 
 </div>
-
-
-
 
 {% endblock %}
 {% block footer %}
