--- a/custom_themes/tethysext-default_theme/tethysext/default_theme/templates/default_theme/header.html
+++ b/custom_themes/tethysext-default_theme/tethysext/default_theme/templates/default_theme/header.html
@@ -1,7 +1,7 @@
 <header id="masthead" class="site-header" role="banner">
-	<div class="header-image" style="position: relative; width: 100%; display: flex;" >
+	<div class="header-image" style="position: relative; max-width: 1320px;" >
 		<a href="https://cw3e.ucsd.edu/" rel="home" style="width: 100%; justify-content: center;">
-            <img src="https://cw3e.ucsd.edu/wp-content/uploads/2024/08/header_finalv2.png" style="padding-left: 10%; padding-right: 10%; width: 100%;" srcset="https://cw3e.ucsd.edu/wp-content/uploads/2024/08/header_finalv2-300x32.png 300w, https://cw3e.ucsd.edu/wp-content/uploads/2024/08/header_finalv2-1024x110.png 1024w, https://cw3e.ucsd.edu/wp-content/uploads/2024/08/header_finalv2-768x83.png 768w, https://cw3e.ucsd.edu/wp-content/uploads/2024/08/header_finalv2.png 1200w" sizes="(max-width: 709px) 85vw, (max-width: 909px) 81vw, (max-width: 1362px) 88vw, 1200px" width="1200" height="129" alt="CW3E Header Logo">
+            <img src="https://cw3e.ucsd.edu/wp-content/uploads/2024/08/header_finalv2.png" style="width: 100%;" srcset="https://cw3e.ucsd.edu/wp-content/uploads/2024/08/header_finalv2-300x32.png 300w, https://cw3e.ucsd.edu/wp-content/uploads/2024/08/header_finalv2-1024x110.png 1024w, https://cw3e.ucsd.edu/wp-content/uploads/2024/08/header_finalv2-768x83.png 768w, https://cw3e.ucsd.edu/wp-content/uploads/2024/08/header_finalv2.png 1200w" sizes="(max-width: 709px) 85vw, (max-width: 909px) 81vw, (max-width: 1362px) 88vw, 1200px" width="1200" height="129" alt="CW3E Header Logo">
         </a>
 	</div><!-- .header-image -->
 
