udpated for deployment

--- a/custom_themes/tethysext-default_theme/tethysext/default_theme/templates/default_theme/header.html
+++ b/custom_themes/tethysext-default_theme/tethysext/default_theme/templates/default_theme/header.html
@@ -13,7 +13,7 @@
 								<div class="menu-main-menu-container"><ul id="menu-main-menu" class="primary-menu"><li id="menu-item-25357" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-25357" aria-haspopup="true"><a href="https://cw3e.ucsd.edu/overview/">About</a><button class="dropdown-toggle" aria-expanded="false"><span class="screen-reader-text">expand child menu</span></button>
 <ul class="sub-menu">
 	<li id="menu-item-25358" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25358"><a href="https://cw3e.ucsd.edu/overview/">Overview</a></li>
-	<li id="menu-item-25349" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-25349"><a href="/wp-content/uploads/CW3E_Strategic_Plan_2025.pdf">CW3E Strategic Plan</a></li>
+	<li id="menu-item-25349" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-25349"><a href="https://cw3e.ucsd.edu/wp-content/uploads/CW3E_Strategic_Plan_2025.pdf">CW3E Strategic Plan</a></li>
 	<li id="menu-item-25359" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25359"><a href="https://cw3e.ucsd.edu/background/">Background</a></li>
 	<li id="menu-item-25363" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25363"><a href="https://cw3e.ucsd.edu/themes/">Themes</a></li>
 	<li id="menu-item-25361" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25361"><a href="https://cw3e.ucsd.edu/people/">People</a></li>
