--- a/custom_themes/tethysext-default_theme/tethysext/default_theme/templates/default_theme/home.html
+++ b/custom_themes/tethysext-default_theme/tethysext/default_theme/templates/default_theme/home.html
@@ -401,7 +401,7 @@
 
 {% block content %}
 {% url 'app_library' as app_library_url %}
-<div id="content-home" class="site-content">
+<div id="content-home" class="site-content border-container">
 	<div class="container-fluid hero-container">
 		<section class="hero clearfix px-5 pb-5 text-center">
 			<div class="row align-items-center">
@@ -424,53 +424,20 @@
 
 				{% if not user.is_authenticated and ENABLE_OPEN_SIGNUP %}
 					<a href="{% url 'accounts:register' %}"
-						class="btn btn-outline-primary mx-0 my-2">Sign Up</a>
+						class="btn btn-extra-border mx-0 my-2">Sign Up</a>
 
 					<a href="{% url 'accounts:login' %}"
-						class="btn btn-outline-primary mx-0 my-2">Login</a>
+						class="btn btn-extra-border mx-0 my-2">Login</a>
 				{% endif %}
 
 				<a href="{{ app_library_url }}"
-					class="btn btn-outline-primary mx-0 my-2">Apps</a>
+					class="btn btn-extra-border mx-0 my-2">Apps</a>
 				</div>
 
 			</div>
 		</section>
 	</div>
 
-	<section class="features clearfix">
-		<div class="container">
-			<div class="row my-5">
-				<div class="col-md">
-					<div class="card feature-card feature-one text-center mb-3 mx-auto">
-						<img src="{% static site_globals.feature_1_image|default:'tethys_portal/images/placeholder.gif' %}" class="card-img-top mx-auto" alt="">
-						<div class="card-body">
-							<h5 class="card-title">{{ site_globals.feature_1_heading|default:"Feature 1" }}</h5>
-							<p class="card-text">{{ site_globals.feature_1_body|default:"Use these features to brag about all of the things users can do with your instance of Tethys Portal." }}</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md">
-					<div class="card feature-card feature-two text-center mb-3 mx-auto">
-						<img src="{% static site_globals.feature_2_image|default:'tethys_portal/images/placeholder.gif' %}" class="card-img-top mx-auto" alt="">
-						<div class="card-body">
-							<h5 class="card-title">{{ site_globals.feature_2_heading|default:"Feature 2" }}</h5>
-							<p class="card-text">{{ site_globals.feature_2_body|default:"Describe the apps and tools that your Tethys Portal provides and add custom pictures to each feature as a finishing touch." }}</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md">
-					<div class="card feature-card feature-three text-center mx-auto">
-						<img src="{% static site_globals.feature_3_image|default:'tethys_portal/images/placeholder.gif' %}" class="card-img-top mx-auto" alt="">
-						<div class="card-body">
-							<h5 class="card-title">{{ site_globals.feature_3_heading|default:"Feature 3" }}</h5>
-							<p class="card-text">{{ site_globals.feature_3_body|default:"You can change the color theme and branding of your Tethys Portal in a jiffy. Visit the Site Admin settings from the user menu and select General Settings." }}</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
 
 </div>
 
