styles for home finished

--- a/custom_themes/tethysext-default_theme/tethysext/default_theme/templates/default_theme/footer.html
+++ b/custom_themes/tethysext-default_theme/tethysext/default_theme/templates/default_theme/footer.html
@@ -36,7 +36,7 @@
           <td width="23%" valign="top" style="border:0; padding-right:20px; padding-top:20px; padding-bottom:0px;">
             <p id="footer_titles"><b>Search CW3E</b></p>
             <form role="search" method="get" class="search-form" action="https://cw3e.ucsd.edu/">
-              <label><span class="screen-reader-text">Search for:</span>
+              <label style="width: 100%;"><span class="screen-reader-text">Search for:</span>
                 <input type="search" class="search-field" placeholder="Search …" value="" name="s">
               </label>
               <button type="submit" class="search-submit"><span class="screen-reader-text">Search</span></button>
