--- a/custom_themes/tethysext-default_theme/tethysext/default_theme/templates/default_theme/home.html
+++ b/custom_themes/tethysext-default_theme/tethysext/default_theme/templates/default_theme/home.html
@@ -386,6 +386,7 @@
 	<![endif]-->
 	<link href="{% static 'default_theme/css/footer-extra.css' %}"  rel="stylesheet" />
 	<link href="{% static 'default_theme/css/home-extra.css' %}"  rel="stylesheet" />
+	<link href="{% static 'default_theme/css/content-extra.css' %}"  rel="stylesheet" />
 	<link href="{% static 'default_theme/css/main.css' %}"  rel="stylesheet" />
 	<link href="{% static 'tethys_portal/css/tethys_main.min.css' %}"  rel="stylesheet" />
 	<link href="{% static 'tethys_portal/css/termsandconditions.min.css' %}"  rel="stylesheet" />
@@ -401,16 +402,17 @@
 
 {% block content %}
 {% url 'app_library' as app_library_url %}
-<div id="content-home" class="site-content border-container">
+<div id="content-home" class="site-content">
 	<div class="container-fluid hero-container">
 		<section class="hero clearfix px-5 pb-5 text-center">
 			<div class="row align-items-center">
 				<div class="col-md-7 mx-auto">
 					<h1 class="hero-title mb-3">{% if site_globals.hero_text %}{{ site_globals.hero_text }}{% else %}Welcome to Firo Portal, the hub for your apps.{% endif %}</h2>
 				<div class="card-body">
-					<img src="/static/default_theme/images/CW3E.png"  class="img-logo">
-					<img src="/static/default_theme/images/USACE.png" class="img-logo">
-					<img src="/static/default_theme/images/Aquaveo.png" class="img-logo">
+					<img src="/static/default_theme/images/CW3E.png"  class="img-logo" style="width: 180px; height: auto;">
+					<img src="/static/default_theme/images/Aquaveo.png" class="img-logo" style="width: 300px; height: auto;">
+
+					<img src="/static/default_theme/images/USACE.png" class="img-logo" style="width: 200px; height: auto;">
 				</div>
 
 					<p class="lead mb-4">{% if site_globals.blurb_text %}{{ site_globals.blurb_text }}{% else %}Firo Portal is designed to be customizable, so that you can host apps for your organization. You can change everything on this page from the Home Page settings.{% endif %}</h3>
@@ -424,14 +426,14 @@
 
 				{% if not user.is_authenticated and ENABLE_OPEN_SIGNUP %}
 					<a href="{% url 'accounts:register' %}"
-						class="btn btn-extra-border mx-0 my-2">Sign Up</a>
+						class="btn  btn-outline-primary btn-extra-border mx-0 my-2">Sign Up</a>
 
 					<a href="{% url 'accounts:login' %}"
-						class="btn btn-extra-border mx-0 my-2">Login</a>
+						class="btn btn-outline-primary btn-extra-border mx-0 my-2">Login</a>
 				{% endif %}
 
 				<a href="{{ app_library_url }}"
-					class="btn btn-extra-border mx-0 my-2">Apps</a>
+					class="btn btn-outline-primary btn-extra-border mx-0 my-2">Apps</a>
 				</div>
 
 			</div>
@@ -443,7 +445,7 @@
 
 {% endblock %}
 {% block footer %}
-	<footer id="site-footer" class="site-footer mt-auto container-fluid">
+	<footer id="site-footer" class="site-footer mt-auto container-fluid"  style="max-width: 1320px;">
 
   {% block footer_content %}
 	{% include "default_theme/footer.html" %}
