--- a/custom_themes/tethysext-default_theme/tethysext/default_theme/templates/default_theme/header.html
+++ b/custom_themes/tethysext-default_theme/tethysext/default_theme/templates/default_theme/header.html
@@ -67,7 +67,7 @@
 		<li id="menu-item-25394" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25394"><a href="https://cw3e.ucsd.edu/850temp_nepac/">850-hPa Temperature</a></li>
 	</ul>
 </li>
-	<li id="menu-item-25351" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-25351"><a href="/DSMaps/DS_intro.html">Interactive Maps</a></li>
+	<li id="menu-item-25351" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-25351"><a href="https://cw3e.ucsd.edu/DSMaps/DS_intro.html">Interactive Maps</a></li>
 	<li id="menu-item-25369" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25369"><a href="https://cw3e.ucsd.edu/precipitation_forecasts/">Precipitation Forecasts</a></li>
 	<li id="menu-item-25399" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25399"><a href="https://cw3e.ucsd.edu/s_and_s_forecasts/">Subseasonal and Seasonal Forecasts</a></li>
 	<li id="menu-item-25401" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-25401" aria-haspopup="true"><a href="https://cw3e.ucsd.edu/west-wrf/">West-WRF</a><button class="dropdown-toggle" aria-expanded="false"><span class="screen-reader-text">expand child menu</span></button>
